--- a/manage-app/package.json
+++ b/manage-app/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "manage-app",
-  "version": "0.1.0",
+  "name": "create-react-app",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^1.0.0-beta.27",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "simple-react-button": "^1.3.0"
+    "material-ui": "next",
+    "prop-types": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-scripts": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "webpack": "^3.10.0"
   }
 }
