--- a/manage-app/package.json
+++ b/manage-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "material-ui": "next",
+    "material-ui-confirm-button": "^0.2.0",
     "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "latest",
     "react": "latest",
