--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.16.2",
+    "foreach-promise": "0.0.1",
     "moment": "^2.20.1",
     "mongoose": "^5.0.7",
     "passport": "^0.4.0",
