--- a/manage-app/package.json
+++ b/manage-app/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.2",
     "material-ui": "^1.0.0-beta.38",
     "material-ui-confirm-button": "^0.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -10,6 +11,8 @@
     "npm": "^5.7.1",
     "prop-types": "latest",
     "react": "latest",
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "latest",
     "react-moment": "^0.7.0",
     "react-redirect": "^1.0.0",
